--- a/admin_panel/admin1.css
+++ b/admin_panel/admin1.css
@@ -17,7 +17,9 @@ body {
   justify-content: space-between;
   color: white;
 }
-
+.logo{
+  display: flex;
+}
 .logo a {
   display: inline-flex;
   justify-content: center;
@@ -25,6 +27,7 @@ body {
   color: rgb(209, 209, 209);
   text-decoration: none;
   font-weight: bold;
+  padding: 0 10px;
 }
 .red {
   color: rgb(255, 0, 0);
@@ -36,6 +39,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 20px;
+  padding: 4px 15px
 }
 
 .nav-links li {
@@ -78,17 +82,25 @@ body {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+
 /* Heading styles */
 
 .dashboard-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: flex
+  ;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+      overflow: hidden;
+  
 }
+
+ 
 .dashboard-container .wlcm {
   font-size: 34px;
   color: #dedede;
-  margin-top: 10vh;
+  margin-top: 17vh;
   margin-bottom: 16px;
 }
 
@@ -160,17 +172,61 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 75px;
+  position: relative;
+  overflow: hidden;
   /* height: 100vh; */
-  width: 75%;
-  padding: 40px;
+  width: 100%;
+  padding: 16vh 0px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   justify-content: center;
+  transition: 3s ease-in-out
+  ;
 }
 
+.crll1{
+  position: absolute;
+  width: 70vh;
+  height: 70vh;
+  box-shadow: 0 0 69px rgba(0, 111, 0, 0.636);
+  border-radius: 50%;
+  left: -170px;
+  top: -156px;
+  transition: 3s ease-in-out
+}
+.crll2{
+  position: absolute;
+  width: 70vh;
+  height: 70vh;
+  box-shadow: 0 0 69px rgba(0, 111, 0, 0.636);
+  border-radius: 50%;
+  right: -169px;
+  overflow: hidden;
+  bottom: -156px;
+  transition: 3s ease-in-out
+}
+
+.home-container:hover .crll1{
+  position: absolute;
+  width: 70vh;
+  height: 70vh;
+  box-shadow: 0 0 69px green;
+  border-radius: 50%;
+  left: -300px;
+  top: -200px;
+}
+.home-container:hover .crll2{
+  position: absolute;
+  width: 70vh;
+  height: 70vh;
+  box-shadow: 0 0 69px green;
+  border-radius: 50%;
+  right: -300px;
+
+  bottom: -250px;
+}
 .home-container h1 {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   margin-bottom: 15px;
 }
 
@@ -241,12 +297,13 @@ body {
   flex-wrap: wrap;
   gap: 20px;
   margin-bottom: 20px;
+  justify-content: center;
 }
 
 .search-item {
   width: calc(35.25% - 20px);
   background: rgb(19, 19, 19);
-  width: 27vh;
+  width: 35vh;
   position: relative;
   padding: 15px;
   border-radius: 10px;
@@ -475,6 +532,8 @@ body {
   color: #898b8e;
   margin: 5px;
   font-size: 12px;
+  max-height: 41px;
+  overflow: hidden;
 }
 
 .website-box strong {
