--- a/styles.css
+++ b/styles.css
@@ -393,6 +393,7 @@ body {
 .search-results {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 10px;
 }
 
@@ -401,6 +402,7 @@ body {
 }
 
 .search-item {
+  position: relative;
   background: #0e0d0d;
   padding: 7px;
   box-shadow: 0 0 6px darkgreen;
@@ -409,7 +411,7 @@ body {
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
-  width: 24vh;
+  width: 40vh;
   height: 30vh;
   display: flex;
   flex-direction: column;
@@ -422,16 +424,19 @@ body {
   border-radius: 5px;
   width: 50px;
 }
+.search-item h3{
+  margin: 5px;
+}
 
 .search-item h3 a {
   text-decoration: none;
   color: #50be3f;
-  font-size: 23px;
+  font-size: 19px;
   padding: 5px 1px 8px;
 }
 
 .search-item p {
-  font-size: 14px;
+  font-size: 11px;
   color: #666;
   margin: 10px;
   height: 20px;
@@ -439,10 +444,13 @@ body {
 }
 .search-item .s-link-btn {
   padding: 5px 7px;
+  position: absolute;
+  right: 65px;
+  bottom: 13px;
   box-shadow: 0 0 5px #028613;
   margin-top: 7px;
   color: green;
-  width: 14vh;
+  width: 20vh;
   text-decoration: none;
   font-size: 15px;
   border-radius: 4px;
@@ -757,7 +765,7 @@ button:hover {
   font-family: "Arial", sans-serif;
   position: relative;
   width: 30vh;
-  height: 30vh;
+  max-height: none;
   margin: 10px;
   padding: 20px;
   border-radius: 10px;
@@ -796,9 +804,11 @@ button:hover {
 }
 
 .website-box p {
-  font-size: 15px;
+  font-size: 13px;
   color: #989898;
   margin: 10px 0;
+  overflow: hidden;
+  height: 70px;
 }
 .website-box .vst-btn {
   display: flex;
