--- a/css_mobile/mobile.css
+++ b/css_mobile/mobile.css
@@ -42,57 +42,73 @@
 
 .home1 {
   height: 50vh;
+  margin-top: 0vh;
 }
 
 .home-container .home1 h1 {
-  font-size: 19px;
-  margin: 10px;
-  margin-top: 8vh;
-  line-height: 43px;
+  font-size: 33px;
+  margin: 5px;
+  margin-top: 6vh;
+  line-height: 42px;
+  width: 95%;
 }
 
 .home-container .home1 h3 {
-  font-size: 12px;
+  font-size: 18px;
   margin-bottom: 20px;
-  line-height: 20px;
-  padding: 5px 30px;
+  line-height: 21px;
+}
+
+.but{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
 }
 .but button {
-  width: 14vh;
-  margin-top: -3px;
-  margin-right: 10px;
+  width: 25vh;
   padding: 8px;
 }
 
 .but button a {
-  font-size: 11px;
+  font-size: 17px;
 }
 
 /* next gen bookmarking */
 
 #digiworld h2 {
-  width: 20vh;
-  font-size: 12px;
+  width: 34vh;
+  font-size: 17px;
   font-weight: 400;
   padding: 9px;
 }
 
 #digiworld {
-  height: 50vh;
+  height: 70vh;
 }
 #digiworld h1 {
-  font-size: 20px;
+  font-size: 27px;
   line-height: 31px;
   margin-top: 19px;
   margin-bottom: 15px;
-  width: 35vh;
+  width: 100%;
 }
 
 #digiworld p {
-  font-size: 11px;
+  font-size: 18px;
   line-height: 20px;
-  margin-bottom: 8px;
-  max-width: 340px;
+  margin-top: 8px;
+  margin-bottom: 6px;
+  max-width: 419px;
+}
+
+#digiworld .digi_support {
+  display: flex
+;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+
 }
 
 #digiworld .digi_support .digi_totle {
@@ -127,8 +143,14 @@
 /* user search bar  */
 
 .search-item h3 a {
-  font-size: 16px;
+  font-size: 35px;
   padding: 4px 1px 6px;
+}
+
+.search-item img {
+  height: auto;
+  border-radius: 5px;
+  width: 75px;
 }
 .search-item .category {
   font-size: 11px;
@@ -137,38 +159,44 @@
 .search-item {
   background: #100f0f;
   box-shadow: 0 0 5px #4a6942;
-  width: 20vh;
-  height: 30vh;
+  width: 60vh;
+  height: auto;
+}
+.search-item p {
+  font-size: 18px;
+  color: #666;
+  margin: 10px;
+  height: 65px;
+  overflow: hidden;
 }
 .search-item .s-link-btn {
   margin-top: 13px;
 
-  width: 15vh;
-
-  font-size: 12px;
+  width: 35vh;
+        font-size: 18px;
 }
 
 /* #scr
  */
 #scr .pa {
-  width: 15vh;
-  font-size: 12px;
+  width: 198px;
+  font-size: 17px;
   font-weight: 400;
   padding: 8px;
 }
 
 .title {
-  font-size: 19px;
+  font-size: 30px;
 }
 
 .description {
-  font-size: 13px;
+  font-size: 18px;
 }
 
 .search-bar input {
-  width: 20vh;
+  width: 27vh;
   padding: 10px;
-  font-size: 11px;
+  font-size: 18px;
 }
 
 .search-bar button {
@@ -177,51 +205,59 @@
 }
 
 .btn {
-  right: 38%;
-  bottom: -40px;
-  padding: 7px 16px;
-  font-size: 12px;
-  color: #aba6a6;
-  margin: 12px;
+         /* right: 29%; */
+        /* bottom: -40px; */
+        padding: 7px 16px;
+        font-size: 18px;
+        font-weight: 600;
+        color: #aba6a6;
+        margin: 12px;
 }
 
 /* features 
  */
 
 #featurs {
-  height: 70vh;
-  width: 100%;
-  margin-top: 5vh;
+  height: 117vh;
+        width: 100%;
+        margin-top: 3vh;
 }
 #featurs h1 {
-  font-size: 19px;
+  font-size: 30px;
   margin-top: 20px;
   margin-bottom: -5px;
 }
 
 #featurs .item h1 {
-  font-size: 18px;
+  font-size: 28px;
   margin-top: 16px;
   margin-bottom: 0px;
 }
+.ftr_itms {
+  display: flex
+;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
 
 .ftr_itms .item {
-  width: 18vh;
-  height: 17vh;
-  margin: 6px;
+  width: 30vh;
+  height: 23vh;
+  margin: 0;
   padding: 15px;
 }
 .ftr_itms .item h3 {
-  font-size: 10px;
-  line-height: 14px;
+  font-size: 14px;
+  line-height: 19px;
   font-weight: 400;
   margin-bottom: 10px;
 }
 
 #featurs p {
-  margin-bottom: 0px;
+  margin-bottom: 8px;
   padding: 10px;
-  font-size: 11px;
+  font-size: 18px;
   text-align: center;
 }
 .ftr_itms .item .fe_img {
@@ -230,7 +266,7 @@
 }
 
 .ftr_itms .item a {
-  font-size: 11px;
+  font-size: 18px;
   padding: 5px;
   border-radius: 5px;
 }
@@ -245,18 +281,21 @@
 }
 
 /* stay updated  */
+#Updated .Updated_sbrbe {
+  height: 60vh;
+}
 
 #Updated .Updated_sbrbe .Up_true {
   padding: 1px 1px;
 }
 
 #Updated .Updated_sbrbe h1 {
-  font-size: 19px;
+  font-size: 30px;
   margin-bottom: 10px;
 }
 
 #Updated .Updated_sbrbe h2 {
-  font-size: 11px;
+  font-size: 18px;
   padding: 8px 11px;
   font-weight: 400;
   margin-top: 4px;
@@ -264,7 +303,7 @@
 }
 
 #Updated .Updated_sbrbe h3 {
-  font-size: 11px;
+  font-size: 18px;
   margin-bottom: 10px;
 }
 #Updated .Updated_sbrbe .search-bar {
@@ -281,13 +320,13 @@
 }
 
 #Updated .Updated_sbrbe .Up_true p {
-  font-size: 11px;
-  margin: 10px 12px;
+  font-size: 16px;
+        margin: 8px 9px
 }
 
 #Updated .Updated_sbrbe p {
   margin: 5px;
-  font-size: 8px;
+  font-size: 12px;
 }
 
 /* website and tools  */
@@ -297,16 +336,17 @@
 }
 
 .display-container h2 {
-  font-size: 19px;
+  font-size: 35px;
   margin: 11px 9px;
+  width: 80%;
 }
 
 .display-container p {
-  font-size: 10px;
+  font-size: 18px;
   font-weight: 400;
   margin: 6px 3px;
   color: rgb(143, 142, 142);
-  text-align: center;
+  /* text-align: center; */
   width: 80%;
 }
 
@@ -315,20 +355,20 @@
   gap: 5px;
 }
 .website-box {
-  width: 20vh;
-  height: 18vh;
+  width: 36vh;
+  height: auto;
   margin: 5px;
   padding: 10px;
 }
 
 .website-box img {
-  width: 35px;
+  width: 80px;
   margin-bottom: 0px;
   padding: 3px;
 }
 
 .website-box h3 {
-  font-size: 16px;
+  font-size: 30px;
   margin: 11px 0;
 }
 
@@ -336,6 +376,6 @@
   color: #3baf40;
   padding: 7px 4px;
   border-radius: 5px;
-  font-size: 14px;
-  width: 15vh;
+  font-size: 19px;
+  width: 23vh;
 }
