--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ body {
   border: none;
   cursor: pointer;
   border-radius: 5px;
-  width: 25vh;
+  width: 30vh;
 }
 
 .but button a {
@@ -166,7 +166,7 @@ body {
 /* digiworld */
 
 #digiworld {
-  height: 80vh;
+  height: 100vh;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -179,7 +179,7 @@ body {
 }
 
 #digiworld .dii {
-  width: 100%;
+  width: 90%;
   max-width: 77vh;
 }
 
@@ -188,7 +188,7 @@ body {
 }
 
 #digiworld h2 {
-  width: 31vh;
+  width: 40vh;
   font-size: 16px;
   font-weight: 400;
   padding: 11px;
@@ -320,7 +320,7 @@ body {
 } */
 
 #scr .pa {
-  width: 23vh;
+  width: 30vh;
   font-size: 16px;
   font-weight: 400;
   padding: 11px;
@@ -444,7 +444,7 @@ body {
 }
 .search-item .s-link-btn {
   padding: 5px 7px;
-  position: absolute;
+  /* position: absolute; */
   right: 65px;
   bottom: 13px;
   box-shadow: 0 0 5px #028613;
@@ -553,7 +553,7 @@ button:hover {
   align-items: center;
   justify-content: center;
 
-  height: 100vh;
+  height: 117vh;
   width: 100%;
 
   margin-top: 20vh;
@@ -637,7 +637,8 @@ button:hover {
   /* margin-top: 10vh; */
   background-color: #313231d2;
   border-radius: 4px;
-  /* padding: 20px; */
+  display: flex;
+    justify-content: center;
 }
 
 #Updated .Updated_sbrbe {
